<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Guardian</string>
    
    <!-- Status -->
    <string name="usb_on">USB Debug ON</string>
    <string name="usb_off">USB Debug OFF</string>
    <string name="protection_active">Protected</string>
    <string name="protection_inactive">Unprotected</string>
    <string name="protection_enabled">Enabled</string>
    <string name="protection_disabled">Disabled</string>
    <string name="scanning">Scanning...</string>
    
    <!-- Home -->
    <string name="usb_debug">USB Debug</string>
    <string name="blocks">Blocks</string>
    <string name="threats">Threats</string>
    <string name="checks">Checks</string>
    <string name="hours_24">24h</string>
    <string name="working_time">Working Time</string>
    
    <!-- Blacklist -->
    <string name="blacklist_title">Blacklist</string>
    <string name="blacklist_subtitle">Manage blocked applications</string>
    <string name="blacklist_empty">No blocked apps</string>
    <string name="app_name_hint">App Name</string>
    <string name="package_name_hint">Package Name</string>
    
    <!-- Log -->
    <string name="log_title">Log</string>
    <string name="log_subtitle">Security events history</string>
    <string name="log_empty">No events</string>
    
    <!-- Settings -->
    <string name="settings_title">Settings</string>
    <string name="settings_subtitle">App preferences</string>
    <string name="general_protection">Protection</string>
    <string name="general_protection_desc">Enable or disable protection</string>
    <string name="usb_debugging">USB Debugging</string>
    <string name="usb_debugging_status_off">USB Debugging: OFF</string>
    <string name="reset_stats">Reset Stats</string>
    <string name="version">Version</string>
    <string name="delete">Delete</string>
    <string name="blacklist">Blacklist</string>
    <string name="log">Log</string>
    <string name="settings">Settings</string>
    <string name="usb_debugging_status">USB Debugging: %s</string>
    <string name="reset_stats_confirm">Reset all statistics?</string>
    <string name="reset">Reset</string>
    <string name="reset_complete">Statistics reset</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="scan">Scan</string>
    <string name="scanning">Scanning...</string>
    <string name="scan_complete">Scan Complete</string>
    <string name="app_blocked">App Blocked</string>
    <string name="app_installed">App Installed</string>
    <string name="app_removed">App Removed</string>
    <string name="device_boot">Device Boot</string>
    <string name="usb_connected">USB Connected</string>
    <string name="usb_warning">USB Warning</string>
    <string name="usb_connected_message">USB connected - ensure debugging is disabled</string>
</resources>
